# Kokoro-Engine

./: .gitignore  AGENTS.md  README.md  README_EN.md  README_JA.md  README_KO.md  README_RU.md  README_ZH-TW.md  flake.nix  package-lock.json  package.json
.github/workflows/: build-linux.yml  build-macos.yml
docs/: API specification.md  PRD.md  architecture.md  extending-tts.md
mods/genshin-theme/components/: settings.html
public/fonts/: README.md
release-notes/: v0.2.8.md  v0.2.9.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0008_dream_memory_v2.sql  0009_dream_memory_v2_prefix_backfill.sql
src-tauri/src/: config.rs  lib.rs
src-tauri/src/actions/: builtin.rs
src-tauri/src/ai/: context.rs  heartbeat.rs  memory.rs  memory_extractor.rs
src-tauri/src/commands/: actions.rs  backup.rs  bot.rs  chat.rs  context.rs  live2d_protocol.rs  llm.rs  memory.rs  mod.rs  stt.rs  telegram.rs  vision.rs
src-tauri/src/imagegen/: config.rs  interface.rs  service.rs
src-tauri/src/llm/: llama_cpp.rs  messages.rs  ollama.rs  provider.rs  service.rs
src-tauri/src/stt/: sensevoice_local.rs
src-tauri/src/telegram/: config.rs
src-tauri/src/tts/: azure.rs  cache.rs  cloud_base.rs  config.rs  interface.rs  local_gpt_sovits.rs  local_vits.rs  manager.rs  mod.rs  omnivoice.rs  openai.rs
src-tauri/src/utils/: download.rs  logging.rs  mod.rs
src-tauri/src/vision/: capture.rs  config.rs  context.rs  watcher.rs
src/core/services/: interaction-service.ts
src/core/types/: mod.ts
src/features/live2d/: Live2DViewer.tsx
src/features/pet/: usePetChat.ts
src/lib/: kokoro-bridge.ts  memory-model-gate.ts  tauri-config.test.ts
src/ui/: i18n.ts
src/ui/hooks/: useBackgroundSlideshow.test.ts  useBackgroundSlideshow.ts
src/ui/locales/: en.json  ja.json  ko.json  ru.json  zh-TW.json  zh.json
src/ui/mods/: IframeSandbox.tsx
src/ui/theme/: default.ts
src/ui/widgets/: CharacterManager.test.ts  CharacterManager.tsx  ChatMessage.tsx  ChatPanel.tsx  ImageGenSettings.tsx  MemoryModelDownloadDialog.tsx  MemoryPanel.tsx  OnboardingOverlay.tsx  SettingsPanel.tsx  WindowTitleBar.tsx  chat-history.test.ts  chat-history.ts  chat-streaming-state.test.ts  chat-streaming-state.ts
src/ui/widgets/settings/: ApiTab.tsx  BotTab.tsx  TtsTab.tsx  VisionTab.tsx
src/windows/: PetWindow.tsx
