[package]
name = "tauri-appkokoro-engine"
version = "0.2.8"
description = "A cross-platform desktop virtual character interaction engine"
authors = ["chyinan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appkokoro_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }
edge-tts-rust = "0.1.3"
eventsource-stream = "0.2"
futures = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
anyhow = "1.0.101"
thiserror = "1"
fastembed = "5.9.0"
rquickjs = { version = "0.11", features = ["futures", "macro", "chrono", "loader"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs-next = "2"
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10"
warp = "0.3"
filetime = "0.2"
screenshots = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
teloxide = { version = "0.13", features = ["macros"] }
sherpa-onnx = "1"
hound = "3"
bzip2 = "0.4"
tar = "0.4"
cpal = "0.15"
rubato = "0.14"
async-openai = { version = "0.34.0", features = ["rustls", "chat-completion", "model"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["ndarray", "load-dynamic"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
stress = []

[dev-dependencies]
tempfile = "3"
proptest = "1"
wiremock = "0.6"
tokio-test = "0.4"
